src/test/ui/issues/issue-1362.stderr
error[E0308]: mismatched types
  --> $DIR/issue-1362.rs:4:16
   |
LL |   let x: u32 = 20i32;
   |                ^^^^^ expected u32, found i32

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
